--- a/test/libsrcml/unit/CMakeLists.txt
+++ b/test/libsrcml/unit/CMakeLists.txt
@@ -22,7 +22,7 @@ file(GLOB LIB_TESTS test_*.cpp)
 foreach(LIB_TEST ${LIB_TESTS})
 	get_filename_component(TEST_NAME ${LIB_TEST} NAME_WE)
     add_executable(${TEST_NAME} ${LIB_TEST})
-    target_link_libraries(${TEST_NAME} srcml_shared)
+    target_link_libraries(${TEST_NAME} libsrcml_shared)
     add_test(NAME ${TEST_NAME} COMMAND $<TARGET_FILE:${TEST_NAME}>)
     set_target_properties(${TEST_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
     set_tests_properties(${TEST_NAME} PROPERTIES TIMEOUT 15)
