Change circleci so that it only builds from branch develop

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,5 +1,9 @@
 version: 2
 jobs:
+    branches:
+      only:
+        - develop
+
     build:
       docker:
         - image: srcml/ubuntu_x86_64_base
