Fix regression for finding boost

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -84,8 +84,9 @@ else()
     find_package(CURL REQUIRED)
     find_package(Iconv REQUIRED)
     set(Boost_NO_BOOST_CMAKE ON)
-#    set(Boost_USE_STATIC_LIBS ON)
+    set(Boost_USE_STATIC_LIBS ON)
 #    find_package(Boost COMPONENTS program_options REQUIRED)
+    find_package(Boost COMPONENTS REQUIRED)
 
     # add include directories
     include_directories(${LibArchive_INCLUDE_DIRS} ${LIBXML2_INCLUDE_DIRS} ${CURL_INCLUDE_DIRS} ${Boost_INCLUDE_DIRS} ${Iconv_INCLUDE_DIRS} ${LibArchive_INCLUDE_DIR} ${LIBXML2_INCLUDE_DIR} ${CURL_INCLUDE_DIR} ${Boost_INCLUDE_DIR})
