Fix typos in manpage

--- a/doc/manpage/srcml.cfg
+++ b/doc/manpage/srcml.cfg
@@ -340,11 +340,11 @@ must be declared with the option `--${XMLNS_FLAG}:`.
 `--${ELEMENT_LONG}` _prefix:name_
 : Wraps every Xpath expression result with an element of the form _prefix:name_. May be mixed with `--${ATTRIBUTE_LONG}`.
 
-`--${XSLT_LONG}\=<file|uri>
+`--${XSLT_LONG}` <file|uri>
 : Apply a transformation from an XSLT <file> or <uri> to each individual unit.
 
-`--${XSLT_PARAM}` <name>="<value>"
-: Passes the string parameter <name> with UTF-8 encoded string <value> to the XSLT program
+`--${XSLT_PARAM}` _name_="<value>"
+: Passes the string parameter _name_ with UTF-8 encoded string <value> to the XSLT program
 
 `--${RELAXNG_OPTION_LONG}`=<file|uri>
 : Output individual units that match the RELAXNG <file> or <uri>.
