Change how directory is referenced in parser tests

--- a/test/parser/CMakeLists.txt
+++ b/test/parser/CMakeLists.txt
@@ -17,29 +17,29 @@
 # along with the srcML Toolkit; if not, write to the Free Software
 # Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 
-set(TESTSUITE testsuite/*.xml)
+set(TESTSUITE *.xml)
 
 # targets to manage parser testing
 add_custom_target(run_parser_tests COMMENT "Run all parser test cases"
                          COMMAND /bin/bash -c 'time srcml --parser-test ${TESTSUITE}'
-                         WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})
+                         WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/testsuite)
 add_custom_target(c      COMMENT "Run all C parser test cases"
                          COMMAND /bin/bash -c 'time srcml --parser-test --language=C    ${TESTSUITE}'
-                         WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})
+                         WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/testsuite)
 add_custom_target(cpp    COMMENT "Run all C++ parser test cases"
                          COMMAND /bin/bash -c 'time srcml --parser-test --language=C++  ${TESTSUITE}'
-                         WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})
+                         WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/testsuite)
 add_custom_target(C++    COMMENT "Run all C++ parser test cases"
                          COMMAND /bin/bash -c 'time srcml --parser-test --language=C++  ${TESTSUITE}'
-                         WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})
+                         WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/testsuite)
 add_custom_target(java   COMMENT "Run all Java parser test cases"
                          COMMAND /bin/bash -c 'time srcml --parser-test --language=Java ${TESTSUITE}'
-                         WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})
+                         WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/testsuite)
 add_custom_target(cs     COMMENT "Run all C\# language parser test cases"
                          COMMAND /bin/bash -c 'time srcml --parser-test --language=C\#  ${TESTSUITE}'
-                         WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})
+                         WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/testsuite)
 add_custom_target(CSHARP COMMENT "Run all C\# language parser test cases"
                          COMMAND /bin/bash -c 'time srcml --parser-test --language=C\#  ${TESTSUITE}'
-                         WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})
+                         WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/testsuite)
 
 add_subdirectory(testsuite)
